# Data-Center-Services

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  KIO_Zero_Cost_API_Strategy.docx  README.md  alembic.ini  pyproject.toml  railway.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  change_request.md
.github/workflows/: ci.yml
configs/: README.md  app.example.yaml  authoritative_source_inventory.json  client_top_136_contenders.json  source_connectors.json
configs/boundaries/: tx_state_boundary.geojson
db/: README.md
db/migrations/: env.py  script.py.mako
db/seeds/: README.md  bonus_catalog.csv  county_catalog.csv  factor_catalog.csv  listing_source_catalog.csv  metro_catalog.csv  scoring_profile.csv  scoring_profile_factor.csv  source_catalog.csv  source_interface.csv
docs/: additional_public_source_research_audit.md  land_listing_coverage_strategy.md  live_candidate_grading_method.md
docs/phase1/: SAD.md  SDD.md  SRS.md  agent_execution_playbook.md  agent_manifest.yaml  build_readiness_checklist.md  delivery_controls_pack.md  environment_strategy.md  implementation_bootstrap.md  initial_build_backlog.md  master_delivery_plan.md  phase1_exit_report.md  phase1_sprint_plan.md  raid_log.md  release_governance.md  rewrite_charter.md  scope_baseline.md  stakeholder_raci.md  status_and_failure_codes.md  target_repo_structure.md  test_cases.md  (+2 more)
infra/: README.md
scripts/: README.md  build_uat_manifest.py  link_top_candidate_parcels.py  report_land_listing_hub_coverage.py  run_connector_refresh.py  run_live_candidate_parcel_scoring.py  seed_reference_data.py  sync_authoritative_reference_seeds.py
tests/: README.md  conftest.py
(+219 files in other folders)
