[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dense-data-center-locator"
version = "0.1.0"
description = "KIO Site Finder clean rewrite implementation scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "truststore>=0.10",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pyproj>=3.7",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "geoalchemy2>=0.15",
  "pyshp>=2.3",
  "shapely>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api/src", "workers/orchestrator/src", "workers/ingestion/src", "workers/evaluation/src", "workers/scoring/src"]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [
  "apps/api/src",
  "workers/orchestrator/src",
  "workers/ingestion/src",
  "workers/evaluation/src",
  "workers/scoring/src",
]
include = [
  "app",
  "app.*",
  "orchestrator",
  "orchestrator.*",
  "ingestion",
  "ingestion.*",
  "evaluation",
  "evaluation.*",
  "scoring",
  "scoring.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app", "orchestrator", "ingestion", "evaluation", "scoring"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
